--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 
             <h1>Dashboard</h1>
 
-            <div class="date">
+            <!-- <div class="date">
                 <input type="date">
-            </div>
+            </div> -->
 
             <div class="insights">
 
